--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,6 @@
 
 <div class="container p-5 my-5 bg-light">
-<<<<<<< HEAD
-  <div class="card" style="width:300px">
+  <div class="card" style="width:100∞">
 
   <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
@@ -34,121 +33,46 @@
   </button>
 </div>
 
-
-=======
-  <div class="d-flex">
-    <%= link_to toggle_favorite_user_path(@user), remote: true, method: :post do %>
-      <%= render 'users/like_button', user: @user %>
-    <% end %>
-</div>
-  <h1 class="card-title"><strong><%= @user.first_name %> <%= @user.last_name %>, <%= @user.age %></strong></h1>
-  <div class="card" style="width:300px">
-    <img class="rounded-circle" class="img-responsive" src="https://res.cloudinary.com/duufhyqzx/image/upload/w_1000,c_fill,ar_1:1,g_auto,r_max,b_rgb:262c35/v1678047757/Capybara%20profile%20picture/stephanie-liverani-Zz5LQe-VSMY-unsplash_vttxk0.jpg" alt="profile photo" style="width:100%">
->>>>>>> 75f029563ddf74001e606a271f9b333115733b6b
-    <div class="card-body">
+<div class="card-body">
       <%= @user.address %>
       <br>
       <%= @user.bio %>
       <br>
       <%= @user.gender %>
       <br>
-<<<<<<< HEAD
-      <%= @user.dob %>
-=======
-      <%= @user.profession %>
-      <br>
-      <%= @user.horoscope %>
-
-    </div>
-    <%= link_to "Send Message", chatroom_path %>
->>>>>>> 75f029563ddf74001e606a271f9b333115733b6b
+      <%= @user.age %>
   </div>
 </div>
 
+<div class="icon-bar">
+  <a href="#"><i class="fa-solid fa-user"></i></a>
+  <a href="#"><i class="fa-solid fa-heart"></i></a>
+  <a href="#"><i class="fa-solid fa-envelope"></i></a>
+  <a href="#"><i class="fa-sharp fa-solid fa-magnifying-glass"></i></a>
+</div>
+</div>
 
-<<<<<<< HEAD
 <style>
 body {margin:0;}
 
 .icon-bar {
   width: 100%;
-  background-color: grey;
+  background-color: #FFD3B1;
   overflow: auto;
 }
 
 .icon-bar a {
   float: left;
-  width: 20%;
+  width: 25%;
   text-align: center;
-  padding: 12px 0;
+  padding: 20px 15;
   transition: all 0.3s ease;
   color: white;
   font-size: 36px;
 }
 
 .icon-bar a:hover {
-  background-color: #000;
-}
-
-.active {
-  background-color: #04AA6D;
+  background-color: #12425b;
 }
 </style>
 <body>
-
-<div class="icon-bar">
-  <a class="active" href="#"><i class="fa-solid fa-user"></i></a>
-  <a href="#"><i class=""></i></a>
-  <a href="#"><i class="fa fa-chat"></i></a>
-</div>
-
-<%# <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-<body>
-
-<!-- Carousel -->
-<div id="demo" class="carousel slide" data-bs-ride="carousel">
-
-  <!-- Indicators/dots -->
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-  </div>
-
-  <!-- The slideshow/carousel -->
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://drifttravel.com/wp-content/uploads/2017/08/Royal_Caribbean_Shay_Mitchell-300x350.jpg" alt="Los Angeles" class="d-block" style="width:100%">
-    </div>
-    <div class="carousel-item">
-      <img src="https://media1.popsugar-assets.com/files/thumbor/AhUt8IsCjZ43umtO-REp43X_vDs/fit-in/1024x1024/filters:format_auto-!!-:strip_icc-!!-/2015/07/29/037/n/1922398/4414db452e661b0b_10890676_1526701110935671_1799160418_n/i/When-She-Traveled-Dubai.jpg" alt="Chicago" class="d-block" style="width:100%">
-    </div>
-    <div class="carousel-item">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTueYEu65ZG54G7mzdVrC8wAaQ_eLlDGZfIxg&usqp=CAU" alt="New York" class="d-block" style="width:100%">
-    </div>
-  </div>
-
-  <!-- Left and right controls/icons -->
-  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </button>
-</div>
-
-</body>
-</html> %>
-=======
-
-<%# <div class="like-icon mx-2 <%= 'red' if current_user.favorited?(cocktail)" data-id="<%= cocktail.id">  %>
-<%# add red class to like icon if current user has favorite this user, data id is the favorited user id %>
->>>>>>> 75f029563ddf74001e606a271f9b333115733b6b
