--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,17 +13,16 @@
       </div>
 
       <!-- The slideshow/carousel -->
-    <div class="carousel-inner">
+    <div class="carousel-inner" class="card" style="margin-left: 20%" >
       <div class="carousel-item active">
-          <img src="https://drifttravel.com/wp-content/uploads/2017/08/Royal_Caribbean_Shay_Mitchell-300x350.jpg" alt="Me" class=“d-block” style="height:50%">
-
+          <img src="https://drifttravel.com/wp-content/uploads/2017/08/Royal_Caribbean_Shay_Mitchell-300x350.jpg" alt="Me"  style="border-radius: 20px;" >
+</div>
         <div class="carousel-item">
-          <img src="https://www2.pictures.zimbio.com/mp/JXO62_M_sx-x.jpg" alt="Me" class=“d-block” style="height:50%">
+          <img src="https://drifttravel.com/wp-content/uploads/2017/08/Royal_Caribbean_Shay_Mitchell-300x350.jpg" alt="Me" style="border-radius: 20px;" >
         </div>
 
         <div class="carousel-item">
-          <img src="https://res.cloudinary.com/dw7zhlxu0/image/upload/v1678551294/KCfVP8We6i4l_plvinm.jpg" alt="Me" class=“d-block” style="height:50%">
-        </div>
+          <img src="https://drifttravel.com/wp-content/uploads/2017/08/Royal_Caribbean_Shay_Mitchell-300x350.jpg" alt="Me" style="border-radius: 20px;" >
         </div>
       </div>
 
@@ -44,7 +43,7 @@
     <div class="col-sm-8">
       <div class="profile-header">
         <h1><%= @user.first_name %> <%= @user.last_name %></h1>
-          <p>Hi, I’m Helen!
+          <p>Hi, I’m Noah!
           Food, dog and beach lover.</p>
           <p>1/2 hungry, 1/2 sleepy!</p>
           <p>📍 Shoreditch</p>
@@ -61,41 +60,41 @@
       <div class="row">
           <p>Connect with me!</p>
       </div>
-    </div> %>
+    </div>
 
     <div class="profile-actions" style="margin-left: 80%" >
      <%= link_to '<i class="fas fa-comments fa-2x"></i>'.html_safe, edit_user_path(@user) %>
     </div>
 
   </div>
-
-
-
 </div>
-<div class="container p-5 my-5 bg-light">
+
+
+
+<%# <div class="container p-5 my-5 bg-light">
   <div class="d-flex">
     <%= link_to toggle_favorite_user_path(@user), remote: true, method: :post do %>
-      <%= render 'users/like_button', user: @user %>
-    <% end %>
-</div>
-  <h1 class="card-title"><strong><%= @user.first_name %> <%= @user.last_name %>, <%= @user.age %></strong></h1>
-  <div class="card" style="width:300px">
+      <%# <%= render 'users/like_button', user: @user %>
+    <%# <% end %>
+<%# </div>
+  <%# <h1 class="card-title"><strong><%= @user.first_name %> <%#= @user.last_name %>, <%#= @user.age %>
+  <%# <div class="card" style="width:300px">
     <img class="rounded-circle" class="img-responsive" src="https://res.cloudinary.com/duufhyqzx/image/upload/w_1000,c_fill,ar_1:1,g_auto,r_max,b_rgb:262c35/v1678047757/Capybara%20profile%20picture/stephanie-liverani-Zz5LQe-VSMY-unsplash_vttxk0.jpg" alt="profile photo" style="width:100%">
     <div class="card-body">
       <%= @user.address %>
-      <br>
+      <%# <br>
       <%= @user.bio %>
-      <br>
+      <%# <br>
       <%= @user.gender %>
-      <br>
-      <%= @user.profession %>
-      <br>
-      <%= @user.horoscope %>
+      <%# <br>
+      <%# <%= @user.profession %>
+      <%# <br> %>
+      <%# <%= @user.horoscope %>
 
-    </div>
+    <%# </div>
     <%= link_to "Send Message", chatroom_path %>
-  </div>
-</div>
+  <%# </div>
+</div> %>
 
 
 
