--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+img {
+  background-repeat: no-repeat;
+}
+
 
 
 .home_button {
@@ -22,7 +26,7 @@
   border-radius: 20px;
   text-align: bottom;
   outline: none;
-  margin-top: 70%;
+  margin-top: 50%;
 }
 
 .container .btn:hover {
@@ -40,4 +44,24 @@ a {
   top: 180px;
   width: 350px;
   height: 350px;
+}
+
+.logout_button {
+  position: absolute;
+  text-decoration: none;
+  top: 50%;
+  left: 50%;
+  width: 170px;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: black;
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 20px;
+  text-align: bottom;
+  outline: none;
+  margin-top: 70%;
 }
