--- a/app/views/users/_search_form.html.erb
+++ b/app/views/users/_search_form.html.erb
@@ -12,7 +12,10 @@
           <%= f.input :gender, collection: ['Female', 'Male'], label: 'Looking for', required: false,
                       prompt: 'Gender',
                       input_html: { data: {controller: "tom-select", tom_select_options_value: {tags: true}}, class: "form-category-select form-control"} %>
-          <%= f.input :address, placeholder: "District e.g. Hackney", label: "Meetup Location", required: true  %>
+          <%= f.input :address, placeholder: "Hackney", label: "Meetup Location", required: true,
+                      input_html: {data: {address_autocomplete_target: "address"}, class: "d-none",},
+                      wrapper_html: {data: {controller: "address-autocomplete",
+                      address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}  %>
         </div>
         <div class="form-actions">
           <%= f.submit "Search", class: "btn btn-primary mx-auto" %>
